Mon Apr 14 17:20:10 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (umethod_bind): use the ancestor iclass instead of new
	  iclass to get rid of infinite recursion, if the defined module
	  is already included.  [ruby-core:62014] [Bug #9721]

Sun Apr 13 12:46:58 2014  Tanaka Akira  <akr@fsij.org>

	* bignum.c (SIZEOF_BDIGIT): Renamed from SIZEOF_BDIGITS.

	* internal.h: Ditto.

	* marshal.c: Ditto.

	* rational.c: Ditto.

Sun Apr 13 10:18:09 2014  Tanaka Akira  <akr@fsij.org>

	* common.mk: Unused target, $(MKMAIN_CMD), removed.

	* Makefile.in (MKMAIN_CMD): Unused macro removed.

	* win32/Makefile.sub (MKMAIN_CMD): Ditto.

Sat Apr 12 22:11:10 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (sym_to_proc), proc.c (rb_block_clear_env_self): clear
	  caller's self which is useless, so that it can get collected.
	  [Fixes GH-592]

Sat Apr 12 09:26:48 2014  Eric Hodel  <drbrain@segment7.net>

	* ext/openssl/ossl_ocsp.c:  [DOC] Document OpenSSL::OCSP.

Fri Apr 11 18:52:38 2014  Koichi Sasada  <ko1@atdot.net>

	* array.c (ARY_SET): added.

	  ARY_SET() is same functionality of RARRAY_ASET(), but
	  it has an assertion (`ary' doesn't have shared array).

Fri Apr 11 16:54:26 2014  Koichi Sasada  <ko1@atdot.net>

	* array.c: make shared arrays WB-protected objects.

	  Shared arrays were WB-unprotected object because
	  sharing array can modify shared array's buffer
	  if it occupied shared array.

	  [sharing array (ary)] -> [shared array (shared)] -> <buff>
	                |                                       A
	                +---------------------------------------+
	             write `buff' with WB(ary, &buff[i], obj)
	             -> if `ary' and `shared' are old, then only `ary'
	                will be remembered.
	             -> traverse from `ary'. But `shared' is old, so
	                that written `obj' is not marked.

	  It cause WB miss so that shared arrays were WB-unprotected.